updated CSS and fixed header alignment issue

--- a/style.css
+++ b/style.css
@@ -1,4 +1,12 @@
+* {
+    /* background-color: rgb(0, 100, 0, 0.2); */
+}
+
 body {
+    margin: 0px;
+    padding: 0px;
+    height: 100vh;
+    width: 100vw;
     text-align: center;
     font-size: 2rem;
     font-family: 'Oswald', sans-serif;
@@ -13,15 +21,10 @@ header {
     font-size: 5rem;
     font-family: 'Inter', sans-serif;
     background-color: rgba(0, 0, 0, 0.600);
-    /* border-radius: 30%; */
-    position: relative;
-    max-width: 100vw;
-    min-height: 10vh;
-    max-height: 30vh;
+    width: 100%;
+    height: auto;
     margin: 0 auto;
     margin-top: 0px;
-    top: -8px;
-    left: -8px;
     padding: 1px;
     line-height: 70%;
 }
